# openclaw-akos

./: .gitignore  .vale.ini  AGENTS.md  BASELINE_REALITY.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  PRODUCT.md  README.md  SECURITY.md  _remaining.txt  compose.neo4j.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-export.txt  requirements-gpu.txt  requirements-langgraph-spike.txt  requirements-openstack.txt  requirements.txt  tmp_commit_msg.txt
.cursor/: hooks.json
akos/: __init__.py  alerts.py  api.py  brand_baseline_reality.py  brand_voice_judge.py  brand_voice_register.py  canonical_freshness.py  checkpoints.py  cicd_baseline.py  docker_engine_probe.py  embeddings.py  engagement_estimation.py  eval_harness.py  evidence_class_gate.py  finance.py  graph_stack.py  hlk.py  hlk_adapter_registry_csv.py  hlk_adviser_disciplines_csv.py  hlk_adviser_questions_csv.py  hlk_aic_capability_implementation_matrix_csv.py  hlk_aic_registry_csv.py  hlk_area_bi_profile_csv.py  hlk_area_completeness.py  hlk_artifact_class_registry_csv.py  hlk_audience_csv.py  hlk_baseline_org_csv.py  hlk_bi_consumer_csv.py  hlk_buildout_backlog_csv.py  hlk_canonical_articulation.py  hlk_canonical_governance_registry_csv.py  hlk_capability_confidence_csv.py  hlk_capability_registry_csv.py  hlk_channel_touchpoint_registry_csv.py  hlk_collaborator_share.py  hlk_component_module_registry.py  hlk_component_primitive_registry_csv.py  hlk_component_service_csv.py  hlk_cursor_rule_tiers.py  hlk_cycle_register_csv.py  (+100 more)
artifacts/: browser-smoke-post-fix-2026-05-17.txt  decision-register-baseline.txt  gateway-repair-post-reboot-2026-06-15.json  i86-p1-proposals-2026-05-17.csv  i99-advisors-security-2026-06-13.json  i99-extensions-2026-06-13.json  i99-migration-list-2026-06-13-full.txt  i99-migration-list-2026-06-13.txt  index-sweep-2026-05-21.json  index-sweep-2026-05-22.json  index-sweep-2026-05-24.json  index-sweep-2026-05-27.json  index-sweep-2026-05-29.json  index-sweep-2026-06-04.json  index-sweep-2026-06-10.json  index-sweep-2026-06-11.json  index-sweep-2026-06-12.json  regression-sweep-2026-05-21.json  regression-sweep-2026-05-22.json  regression-sweep-2026-05-23.json  regression-sweep-2026-05-24-wave-r.json  regression-sweep-2026-05-25.json  regression-sweep-2026-05-29-wave-r-plus-5.json  regression-sweep-2026-06-04.json  regression-sweep-p95-gov-8-2026-06-09.json  release-gate-baseline.txt  release-gate-post-fix.txt
config/: agent-capabilities.json  cursor-rule-tiers.json  intelligence-matrix-schema.json  intent-exemplars.json  logging.json  mcporter.json.example  model-catalog.json  model-tiers.json  openclaw.json.example  permissions.json  verification-profiles.json
docs/: ARCHITECTURE.md  DEVELOPER_CHECKLIST.md  GLOSSARY.md  README.md  SOP.md  USER_GUIDE.md
prompts/: ARCHITECT_PROMPT.md  EXECUTOR_PROMPT.md  MADEIRA_PROMPT.md  ORCHESTRATOR_PROMPT.md  VERIFIER_PROMPT.md
scripts/: _kpi_burndown.py  _redact_helper_p2.py  agent_memory_trigger_watcher.py  (+277 more)
(+3137 files in other folders)
