[project]
name = "openclaw-akos"
version = "0.4.1"
description = "AKOS orchestration library, scripts, and HLK control plane (workspace metadata for tooling)."
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Only the akos/ package ships in the editable install.
# Sibling directories (config/, static/, prompts/, supabase/, artifacts/) are
# workspace assets, not Python packages; pip 26.1's stricter setuptools
# auto-discovery would otherwise refuse this flat layout (D-IH-48-J).
[tool.setuptools.packages.find]
include = ["akos*"]
exclude = ["tests*", "scripts*", "config*", "static*", "prompts*", "supabase*", "artifacts*", "docs*"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "validate_*.py", "e2e_*.py"]
testpaths = ["tests"]
markers = [
    "live: marks tests that require live API server (deselect with '-m \"not live\"')",
    "graph: marks HLK graph / Neo4j-adjacent control-plane tests (see `py scripts/test.py graph`)",
    "neo4j: marks tests that require a live Bolt endpoint (NEO4J_URI + NEO4J_PASSWORD); skipped in default CI",
    "executor_harness: optional ephemeral patch + pytest oracle; set AKOS_EXECUTOR_HARNESS=1",
    "madeira: marks Madeira interaction/trajectory tests (see `py scripts/test.py madeira`)",
    "intent: marks intent classification and golden tests (see `py scripts/test.py intent`)",
    "cicd: marks I68 CICD-baseline + observability validators (Playwright baseline / Sentry release format / CICD baseline)",
    "brand: marks I71 P1 Pack A1 brand voice register validator + chassis tests (Pydantic models + parsers + 10-layer scan)",
    "openclaw_runtime: marks I87 OpenClaw operator-runtime hardening tests (plugin pinning validator + modelsConfig hygiene + escalation patch)",
    "hlk: marks HLK-canonical-CSV validator and registry tests (process_list / INITIATIVE_REGISTRY / PROGRAM_REGISTRY / DECISION_REGISTER / OPS_REGISTER)",
]
